# NeuroGPT

./: pyproject.toml
src/trainer/: base.py
